--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title> Filina's Portfolio </title>
+		%sveltekit.head%
+		<title> This is my introduction!</title>
 		<link rel="stylesheet" href="%sveltekit.assets%/style.css" />
 		<script src="%sveltekit.assets%/global.js" type="module"></script>
 	</head>
